add smithy dir as arg